--- a/apps/templates/solr-helm.yaml
+++ b/apps/templates/solr-helm.yaml
@@ -7,7 +7,7 @@ metadata:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: solr-helm
+    namespace: solr
     server: {{ .Values.spec.destination.server }}
   project: default
   source:
