--- a/solr-helm/values.yaml
+++ b/solr-helm/values.yaml
@@ -3,3 +3,8 @@ solr:
   ingress:
     enabled: true
     hostname: solr.127.0.0.1.nip.io
+  persistence:
+    enabled: false
+  zookeeper:
+    persistence:
+      enabled: false
