--- a/solr-helm/values.yaml
+++ b/solr-helm/values.yaml
@@ -3,7 +3,7 @@ solr:
   authentication:
     adminPassword: admin
   ingress:
-    enabled: true
+    enabled: false
     hostname: solr.127.0.0.1.nip.io
   persistence:
     enabled: false
